core/bindings/lang/clang/headers/nogamepads_utils.h

typedef enum FfiConnectionMessageTag {
  ConnectionJoin,
  ConnectionRequestGameInfos,
  ConnectionRequestLayoutConfigure,
  ConnectionRequestSkinPackage,
  ConnectionReady,
  ConnectionError,
} FfiConnectionMessageTag;
typedef enum FfiConnectionResponseMessageTag {
  GameInfosResponse,
  DenyResponse,
  FailResponse,
  OkResponse,
  WelcomeResponse,
  ErrorResponse,
} FfiConnectionResponseMessageTag;
typedef enum FfiControlMessageTag {
  CtrlMsg,
  CtrlPressed,
  CtrlReleased,
  CtrlAxis,
  CtrlDir,
  CtrlExit,
  CtrlError,
  CtrlEnd,
} FfiControlMessageTag;
typedef enum FfiExitReason {
  ExitReason,
  GameOverReason,
  ServerClosedReason,
  YouAreKickedReason,
  YouAreBannedReason,
  ErrorReason,
} FfiExitReason;
typedef enum FfiGameMessageTag {
  GameEventTrigger,
  GameMsg,
  GameLetExit,
  GameError,
  GameEnd,
} FfiGameMessageTag;
typedef enum FfiJoinFailedMessage {
  ContainIdenticalPlayer,
  PlayerBanned,
  GameLocked,
  UnknownError,
} FfiJoinFailedMessage;
typedef struct FfiAccount {
  char *id;
  char *player_hash;
} FfiAccount;
typedef struct FfiCustomize {
  char *nickname;
  int color_hue;
  double color_saturation;
  double color_value;
} FfiCustomize;
typedef struct FfiPlayer {
  struct FfiAccount account;
  struct FfiCustomize *customize;
} FfiPlayer;
typedef union FfiControlMessageUnion {
  char *message;
  uint8_t key;
  struct FfiKeyAndAxis key_and_axis;
  struct FfiKeyAndDirection key_and_direction;
} FfiControlMessageUnion;
typedef struct FfiControlMessage {
  enum FfiControlMessageTag tag;
  union FfiControlMessageUnion data;
} FfiControlMessage;
typedef union FfiGameMessageUnion {
  uint8_t key;
  char *message;
  enum FfiExitReason exit_reason;
} FfiGameMessageUnion;
typedef struct FfiGameMessage {
  enum FfiGameMessageTag tag;
  union FfiGameMessageUnion data;
} FfiGameMessage;
typedef union FfiConnectionMessageUnion {
  struct FfiPlayer player;
} FfiConnectionMessageUnion;
typedef struct FfiConnectionMessage {
  enum FfiConnectionMessageTag tag;
  union FfiConnectionMessageUnion data;
} FfiConnectionMessage;
typedef struct KeyValuePair {
  char *key;
  char *value;
} KeyValuePair;
typedef struct FfiGameInfo {
  struct KeyValuePair *data;
  uintptr_t len;
  uintptr_t cap;
} FfiGameInfo;
typedef union FfiConnectionResponseMessageUnion {
  struct FfiGameInfo game_info;
  enum FfiJoinFailedMessage failed_message;
} FfiConnectionResponseMessageUnion;
typedef struct FfiConnectionResponseMessage {
  enum FfiConnectionResponseMessageTag tag;
  union FfiConnectionResponseMessageUnion data;
} FfiConnectionResponseMessage;
typedef struct FfiControllerData {
  void *_0;
} FfiControllerData;
typedef struct FfiControllerRuntime {
  void *inner;
  void (*drop_fn)(void*);
} FfiControllerRuntime;
typedef struct FfiTcpServerService {
  void *_0;
} FfiTcpServerService;
/**
 * Bind ipv4 address
 */
void tcp_server_bind_ipv4(struct FfiTcpServerService *service,
                          uint8_t a0,
                          uint8_t a1,
                          uint8_t a2,
                          uint8_t a3);
/**
 * Bind ipv6 address
 */
bool tcp_server_bind_ipv6(struct FfiTcpServerService *service, const char *ip_str);
/**
 * Bind port
 */
void tcp_server_bind_port(struct FfiTcpServerService *service, uint16_t port);
/**
 * Bind address with ipv4
 */
void tcp_server_bind_address_v4(struct FfiTcpServerService *service,
                                uint8_t a0,
                                uint8_t a1,
                                uint8_t a2,
                                uint8_t a3,
                                uint16_t port);
/**
 * Bind address with ipv6
 */
bool tcp_server_bind_address_v6(struct FfiTcpServerService *service,
                                const char *ip_str,
                                uint16_t port);
/**
 * Start listening
 */
void tcp_server_listening_block_on(struct FfiTcpServerService *service);
/**
 * Free tcp server
 */
void free_tcp_server(struct FfiTcpServerService *service);
void enable_logger(uint8_t level);