core/bindings/lang/csharp/NoGamepads_CharpBindings/NoGamepads_Core/Generated/NoGamepads.Native.cs


            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_server_bind_ipv4", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void TcpServerBindIpv4(__IntPtr service, byte a0, byte a1, byte a2, byte a3);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_server_bind_ipv6", CallingConvention = __CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool TcpServerBindIpv6(__IntPtr service, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string ip_str);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_server_bind_port", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void TcpServerBindPort(__IntPtr service, ushort port);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_server_bind_address_v4", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void TcpServerBindAddressV4(__IntPtr service, byte a0, byte a1, byte a2, byte a3, ushort port);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_server_bind_address_v6", CallingConvention = __CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool TcpServerBindAddressV6(__IntPtr service, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string ip_str, ushort port);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_server_listening_block_on", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void TcpServerListeningBlockOn(__IntPtr service);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_tcp_server", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeTcpServer(__IntPtr service);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "enable_logger", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void EnableLogger(byte level);
        }

        public static void FreeCString(sbyte* ptr)
        {
            __Internal.FreeCString(ptr);
        }

        /// <summary>Register a player</summary>
        public static global::NoGamepads_Sharp.FfiPlayer PlayerRegister(string id, string password)
        {
            var ___ret = __Internal.PlayerRegister(id, password);
            var __result0 = global::NoGamepads_Sharp.FfiPlayer.__GetOrCreateInstance(___ret, false);
            return __result0;
        }

        /// <summary>Register a player from hash</summary>
        public static global::NoGamepads_Sharp.FfiPlayer PlayerFromHash(string hash)
        {
            var ___ret = __Internal.PlayerFromHash(hash);
            var __result0 = global::NoGamepads_Sharp.FfiPlayer.__GetOrCreateInstance(___ret, false);
            return __result0;
        }

        /// <summary>Get a hash from player</summary>
        public static string PlayerGetHash(global::NoGamepads_Sharp.FfiPlayer player)
        {
            var __arg0 = player is null ? __IntPtr.Zero : player.__Instance;
            var ___ret = __Internal.PlayerGetHash(__arg0);
            return CppSharp.Runtime.MarshalUtil.GetString(global::System.Text.Encoding.UTF8, ___ret);
        }

        /// <summary>Check if the player's password is correct</summary>
        public static bool PlayerCheck(global::NoGamepads_Sharp.FfiPlayer player, string password)
        {
            var __arg0 = player is null ? __IntPtr.Zero : player.__Instance;
            var ___ret = __Internal.PlayerCheck(__arg0, password);
            return ___ret;
        }

        /// <summary>Set the player's nickname</summary>
        public static void PlayerSetNickname(global::NoGamepads_Sharp.FfiPlayer player, string nickname)
        {
            var __arg0 = player is null ? __IntPtr.Zero : player.__Instance;
            __Internal.PlayerSetNickname(__arg0, nickname);
        }

        /// <summary>Set the player's hue</summary>
        public static void PlayerSetHue(global::NoGamepads_Sharp.FfiPlayer player, int hue)
        {
            var __arg0 = player is null ? __IntPtr.Zero : player.__Instance;
            __Internal.PlayerSetHue(__arg0, hue);
        }

        /// <summary>Set the player's HSV color</summary>
        public static void PlayerSetHsv(global::NoGamepads_Sharp.FfiPlayer player, int hue, double saturation, double value)
        {
            var __arg0 = player is null ? __IntPtr.Zero : player.__Instance;
            __Internal.PlayerSetHsv(__arg0, hue, saturation, value);
        }

        /// <summary>Free the player</summary>
        public static void FreePlayer(global::NoGamepads_Sharp.FfiPlayer player)
        {
            var __arg0 = player is null ? __IntPtr.Zero : player.__Instance;
            __Internal.FreePlayer(__arg0);
        }

        /// <summary>Free ControlMessage</summary>
        public static void FreeControlMessage(global::NoGamepads_Sharp.FfiControlMessage msg)
        {
            var __arg0 = msg is null ? __IntPtr.Zero : msg.__Instance;
            __Internal.FreeControlMessage(__arg0);
        }

        /// <summary>Free GameMessage</summary>
        public static void FreeGameMessage(global::NoGamepads_Sharp.FfiGameMessage msg)
        {
            var __arg0 = msg is null ? __IntPtr.Zero : msg.__Instance;
            __Internal.FreeGameMessage(__arg0);
        }

        /// <summary>Free ExitReason</summary>
        public static void FreeExitReason(ref global::NoGamepads_Sharp.FfiExitReason msg)
        {
            fixed (global::NoGamepads_Sharp.FfiExitReason* __msg0 = &msg)
            {
                var __arg0 = __msg0;
                __Internal.FreeExitReason(__arg0);
            }
        }

        /// <summary>Free ConnectionMessage</summary>
        public static void FreeConnectionMessage(global::NoGamepads_Sharp.FfiConnectionMessage msg)
        {
            var __arg0 = msg is null ? __IntPtr.Zero : msg.__Instance;
            __Internal.FreeConnectionMessage(__arg0);
        }

        /// <summary>Free ConnectionResponseMessage</summary>
        public static void FreeConnectionResponseMessage(global::NoGamepads_Sharp.FfiConnectionResponseMessage msg)
        {
            var __arg0 = msg is null ? __IntPtr.Zero : msg.__Instance;
            __Internal.FreeConnectionResponseMessage(__arg0);
        }

        /// <summary>Free JoinFailedMessage</summary>
        public static void FreeJoinFailedMessage(ref global::NoGamepads_Sharp.FfiJoinFailedMessage msg)
        {
            fixed (global::NoGamepads_Sharp.FfiJoinFailedMessage* __msg0 = &msg)
            {
                var __arg0 = __msg0;
                __Internal.FreeJoinFailedMessage(__arg0);
            }
        }

        public static void FreeGameInfo(global::NoGamepads_Sharp.FfiGameInfo map)
        {
            if (ReferenceEquals(map, null))
                throw new global::System.ArgumentNullException("map", "Cannot be null because it is passed by value.");
            var __arg0 = map.__Instance;
            __Internal.FreeGameInfo(__arg0);
        }

        /// <summary>Create controller data</summary>
        public static global::NoGamepads_Sharp.FfiControllerData ControllerDataNew()
        {
            var ___ret = __Internal.ControllerDataNew();
            var __result0 = global::NoGamepads_Sharp.FfiControllerData.__GetOrCreateInstance(___ret, false);
            return __result0;
        }

        /// <summary>Bind player to controller</summary>
        public static void ControllerDataBindPlayer(global::NoGamepads_Sharp.FfiControllerData controller, global::NoGamepads_Sharp.FfiPlayer ffi_player)
        {
            var __arg0 = controller is null ? __IntPtr.Zero : controller.__Instance;
            var __arg1 = ffi_player is null ? __IntPtr.Zero : ffi_player.__Instance;
            __Internal.ControllerDataBindPlayer(__arg0, __arg1);
        }

        /// <summary>Build runtime</summary>
        public static global::NoGamepads_Sharp.FfiControllerRuntime ControllerDataBuildRuntime(global::NoGamepads_Sharp.FfiControllerData controller)
        {
            var __arg0 = controller is null ? __IntPtr.Zero : controller.__Instance;
            var ___ret = __Internal.ControllerDataBuildRuntime(__arg0);
            var __result0 = global::NoGamepads_Sharp.FfiControllerRuntime.__GetOrCreateInstance(___ret, false);
            return __result0;
        }

        /// <summary>Free ControllerData memory</summary>
        public static void FreeControllerData(global::NoGamepads_Sharp.FfiControllerData controller)
        {
            var __arg0 = controller is null ? __IntPtr.Zero : controller.__Instance;
            __Internal.FreeControllerData(__arg0);
        }

        /// <summary>Close runtime and exit game</summary>
        public static void ControllerRuntimeClose(global::NoGamepads_Sharp.FfiControllerRuntime runtime)
        {
            var __arg0 = runtime is null ? __IntPtr.Zero : runtime.__Instance;
            __Internal.ControllerRuntimeClose(__arg0);
        }

        /// <summary>Send control message</summary>
        public static void ControllerRuntimeSendMessage(global::NoGamepads_Sharp.FfiControllerRuntime runtime, global::NoGamepads_Sharp.FfiControlMessage control_message)
        {
            var __arg0 = runtime is null ? __IntPtr.Zero : runtime.__Instance;
            var __arg1 = control_message is null ? __IntPtr.Zero : control_message.__Instance;
            __Internal.ControllerRuntimeSendMessage(__arg0, __arg1);
        }

        /// <summary>Send text message</summary>
        public static void ControllerRuntimeSendTextMessage(global::NoGamepads_Sharp.FfiControllerRuntime runtime, string message_ptr)
        {
            var __arg0 = runtime is null ? __IntPtr.Zero : runtime.__Instance;
            __Internal.ControllerRuntimeSendTextMessage(__arg0, message_ptr);
        }

        /// <summary>Press a button</summary>
        public static void ControllerRuntimePressAButton(global::NoGamepads_Sharp.FfiControllerRuntime runtime, byte key)
        {
            var __arg0 = runtime is null ? __IntPtr.Zero : runtime.__Instance;
            __Internal.ControllerRuntimePressAButton(__arg0, key);
        }

        /// <summary>Release a button</summary>
        public static void ControllerRuntimeReleaseAButton(global::NoGamepads_Sharp.FfiControllerRuntime runtime, byte key)
        {
            var __arg0 = runtime is null ? __IntPtr.Zero : runtime.__Instance;
            __Internal.ControllerRuntimeReleaseAButton(__arg0, key);
        }

        /// <summary>Change axis value</summary>
        public static void ControllerRuntimeChangeAxis(global::NoGamepads_Sharp.FfiControllerRuntime runtime, byte key, double axis)
        {
            var __arg0 = runtime is null ? __IntPtr.Zero : runtime.__Instance;
            __Internal.ControllerRuntimeChangeAxis(__arg0, key, axis);
        }

        /// <summary>Change direction value</summary>
        public static void ControllerRuntimeChangeDirection(global::NoGamepads_Sharp.FfiControllerRuntime runtime, byte key, double x, double y)
        {
            var __arg0 = runtime is null ? __IntPtr.Zero : runtime.__Instance;
            __Internal.ControllerRuntimeChangeDirection(__arg0, key, x, y);
        }
